--- a/Shopping/docker-compose.yml
+++ b/Shopping/docker-compose.yml
@@ -2,13 +2,13 @@ version: '3.4'
 
 services:
   shopping.api:
-    image: ${DOCKER_REGISTRY-}shoppingapi
+    image: ${DOCKER_REGISTRY-}/shoppingapi
     build:
       context: .
       dockerfile: Shopping.API/Dockerfile
 
   shopping.client:
-    image: ${DOCKER_REGISTRY-}shoppingclient
+    image: ${DOCKER_REGISTRY-}/shoppingclient
     build:
       context: .
       dockerfile: Shopping.Client/Dockerfile
