--- a/k8s/shoppingapi.yaml
+++ b/k8s/shoppingapi.yaml
@@ -2,10 +2,11 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: shoppingapi-deployment
+  namespace: lab
   labels:
     app: shoppingapi
 spec:
-  replicas: 1
+  replicas: 4
   selector:
     matchLabels:
       app: shoppingapi
@@ -13,6 +14,13 @@ spec:
     metadata:
       labels:
         app: shoppingapi
+      annotations:
+        consul.hashicorp.com/connect-inject: "true"
+        consul.hashicorp.com/connect-service: shoppingapi-lab
+        consul.hashicorp.com/service-tags: "\
+          traefik.enable=true,\
+          traefik.http.routers.shoppingapi-lab.entrypoints=websecure,\
+          traefik.http.routers.shoppingapi-lab.rule=Host(`shoppingapi-lab.mypath.com`) && PathPrefix(`/`)"
     spec:
       containers:
         - name: shoppingapi
@@ -25,9 +33,9 @@ spec:
               value: Development
             - name: DatabaseSettings__ConnectionString
               valueFrom:
-                  configMapKeyRef:
-                    name: mongo-configmap
-                    key: connection_string
+                configMapKeyRef:
+                  name: mongo-configmap
+                  key: connection_string
           resources:
             requests:
               memory: "64Mi"
@@ -40,12 +48,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: shoppingapi-service
+  namespace: lab
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: shoppingapi
   ports:
     - protocol: TCP
       port: 8000
       targetPort: 80
-      nodePort: 31000
